[gd_scene load_steps=3 format=3 uid="uid://ddbw8h12y4mf2"]

[ext_resource type="Script" uid="uid://bhmjyo6rvbyca" path="res://addons/godot_item_system/scenes/ui/widgets/item_tile.gd" id="1_xxxxx"]
[ext_resource type="Texture2D" uid="uid://3ymffvd3aevf" path="res://icon.svg" id="2_cqq2w"]

[node name="ItemTile" type="MarginContainer"]
custom_minimum_size = Vector2(48, 48)
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.5)

[node name="RarityFrame" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 1, 1, 0.2)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Icon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_cqq2w")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "99"
horizontal_alignment = 2

[node name="EnhancementLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "+10"
horizontal_alignment = 2
vertical_alignment = 2
